# turnnel

./: Cargo.toml  README.md  client-test.sh  exclude.txt  get_vk_token.py  server-test.sh  setup-wg.sh  start-client.sh  vps-setup.sh  wg-client.conf  wg-server.conf
crates/turnnel-client/: Cargo.toml
crates/turnnel-client/src/: proxy.rs
crates/turnnel-peer/: Cargo.toml
crates/turnnel-peer/src/: relay.rs
crates/turnnel-providers/: Cargo.toml
crates/turnnel-providers/src/: lib.rs  manual.rs  meet.rs  sdp.rs  teams.rs  vk.rs  yandex.rs
crates/turnnel-session/: Cargo.toml
crates/turnnel-session/src/: codec.rs  lib.rs  session.rs  tests.rs  transport.rs
crates/turnnel-stun/: Cargo.toml
crates/turnnel-stun/src/: attribute.rs  channel_data.rs  error.rs  integrity.rs  lib.rs  message.rs  tests.rs  types.rs
src/: main.rs
