[package]
name = "turnnel-client"
version = "0.3.0"
edition = "2021"

[dependencies]
turnnel-stun = { path = "../turnnel-stun" }
turnnel-session = { path = "../turnnel-session" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "sync"] }
bytes = "1"
anyhow = "1"
tracing = "0.1"