[package]
name = "turnnel-providers"
version = "0.3.0"
edition = "2021"

[dependencies]
turnnel-session = { path = "../turnnel-session" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
rand = "0.8"