[package]
name = "turnnel-session"
version = "0.3.0"
edition = "2021"

[dependencies]
turnnel-stun = { path = "../turnnel-stun" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "sync"] }
bytes = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"

tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"
rustls-pki-types = "1.0"
rustls-native-certs = "0.8"
async-trait = "0.1"
futures-util = { version = "0.3", features = ["sink"] }